<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f6f6f6"
    tools:context="com.foodie.app.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login"
        android:layout_centerHorizontal="true"
        android:id="@+id/app_logo"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo_signin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/text_margin"
        android:layout_below="@+id/app_logo"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/ed_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/mobile_number"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/login_left"
                android:background="@drawable/shadow_view"
                app:theme="@style/MyEditTextTheme"
                android:imeOptions="actionNext"
                android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/password_left"
                android:drawablePadding="10dp"
                android:background="@drawable/shadow_view"
                app:theme="@style/MyEditTextTheme"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/register_this_account"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>